2009-02-13  Oliver Hunt  <oliver@apple.com>

        Reviewed by Jon Honeycutt.

        Math.random is really slow on windows.

        Math.random calls WTF::randomNumber which is implemented as
        the secure rand_s on windows.  Unfortunately rand_s is an order
        of magnitude slower than arc4random.  For this reason I've
        added "weakRandomNumber" for use by JavaScript's Math Object.
        In the long term we should look at using our own secure PRNG
        in place of the system, but this will do for now.

        30% win on SunSpider on Windows, resolving most of the remaining
        disparity vs. Mac.

        * runtime/MathObject.cpp:
        (JSC::MathObject::MathObject):
        (JSC::mathProtoFuncRandom):
        * wtf/RandomNumber.cpp:
        (WTF::weakRandomNumber):
        (WTF::randomNumber):
        * wtf/RandomNumber.h:
        * wtf/RandomNumberSeed.h:
        (WTF::initializeWeakRandomNumberGenerator):

2009-02-12  Mark Rowe  <mrowe@apple.com>

        Fix the build for other platforms.

        * wtf/RandomNumber.cpp:
        (WTF::randomNumber):

2009-02-12  Gavin Barraclough  <barraclough@apple.com>

        Reviewed by Sam Weinig.

        Remove (/reduce) use of hard-wired register names from the JIT.
        Currently there is no abstraction of registers used in the JIT,
        which has a number of negative consequences.  Hard-wiring x86
        register names makes the JIT less portable to other platforms,
        and prevents us from performing dynamic register allocation to
        attempt to maintain more temporary values in machine registers.
        (The latter will be more important on x86-64, where we have more
        registers to make use of).

        Also, remove MacroAssembler::mod32.  This was not providing a
        useful abstraction, and was not in keeping with the rest of the
        MacroAssembler interface, in having specific register requirements.

        * assembler/MacroAssemblerX86Common.h: